# MineSweeper

./: CMakeLists.txt
run/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
run/Textures/: _credits.txt
src/: main.cpp
